<resources>
    <string name="app_name">Make Disciple</string>

    <string name="about">About</string>

    <string name="intro1">You are holding a handbook for all members of a university Christian ministry. Included in the handbook are studies that may be used during your weekly campus bible study. There are also “God Times” that will help you build a personal relationship with Jesus Christ. If this is new to you, there is a summary in the next section of the Gospel message that explains God’s love for you and how to become a follower of Jesus.\n</string>
    <string name="intro2">Jesus wants everyone to follow him. He wants you to be his modern day disciple. Listen to what he said in Mk. 8:34–38:\n</string>
    <string name="intro3">Then he called the crowd to him along with his disciples and said: “Whoever wants to be my disciple, must deny themselves and take up their cross and follow me. For whoever wants to save their life will lose it, but whoever loses their life for me and for the gospel will save it. What good is it for someone to gain the whole world, yet forfeit their soul? Or what can anyone give in exchange for their soul? If anyone is ashamed of me and my words in this adulterous and sinful generation, the Son of Man will be ashamed of them when he comes in his Father’s glory with the holy angels.”\n</string>
    <string name="intro4">Following Jesus is serious business, but it is how you experience God’s love. It is how you become the person he created you to be.\n</string>
    <string name="intro5">The word disciple sounds a lot like the word discipline, doesn’t it? There are several disciplines that followers of Jesus have found beneficial: regular bible reading and prayer; careful study of the bible; discussing the bible with a group; meeting with God’s people for worship and teaching; being part of a local church; telling your friends about Jesus; and meeting weekly with a mentor.\n</string>
    <string name="intro6">Materials are included here that will help you with each of these disciplines.\n</string>
    <string name="intro7">The choices you make at university will guide the course of your life. Making time for the Lord, his people, and telling others about him will be the best choices you can possibly make. Why? Because you will be living the way the Creator designed you to live.\n</string>
    <string name="intro8">Whether you are a committed Christ-follower, or just investigating the possibility, this handbook is for you.</string>

    <string name="about1">\nMichael Mowry is the Director of Chi Alpha Christian Fellowship at Central Washington University. He serves on the Executive Committee overseeing the training of future campus ministers (Campus Ministers in Training) for Chi Alpha USA. Interns from Central are leading on 12 campuses stateside, and have served on 9 overseas. Michael pioneered the Chi Alpha ministry at the University of Missouri- Columbia, and along with his wife, Carol, founded and administrated The Ellensburg Christian School. He also helps coordinate the Perspectives on the World Christian Movement classes in Ellensburg. He and Carol have three grown sons. Michael holds a B.A. in Education at Western Washington University, and an M.A. in Theological Studies at Regent College, Vancouver, Canada.\n</string>
    <string name="about2">For more information, or to order books in bulk for your campus, please visit xacentral.com/DMMD or email Michael@xacentral.com.\n</string>
    <string name="about3">This app was made possible through the Central Washington University Department of Computer Science. It was developed by Jesse Calvert, Carlos Valdez-Valdivia, Andres Pena, Brad Ehrmann, and Jeremy Rodney.</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
